# cyberhosp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
config/rules/: dlp_rules.yaml
data/synthea-sample/: README.md  patients.csv
data/synthea-sample/fhir/: AllergyIntolerance.ndjson  CarePlan.ndjson  CareTeam.ndjson  Claim.ndjson  Condition.ndjson  Device.ndjson  DiagnosticReport.ndjson  DocumentReference.ndjson  Encounter.ndjson  ImagingStudy.ndjson  Immunization.ndjson  Location.1783786018280.ndjson  Medication.ndjson  MedicationAdministration.ndjson  MedicationRequest.ndjson  Observation.ndjson  Organization.1783786018280.ndjson  Patient.ndjson  Practitioner.1783786018280.ndjson  PractitionerRole.1783786018280.ndjson  Procedure.ndjson  Provenance.ndjson  SupplyDelivery.ndjson  parameters.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  threat-coverage.md
docs/integration/: ehr-adapters.md
scripts/: setup.sh  validate.sh
sim/: __init__.py
src/cyberhosp/alerting/: __init__.py  notifier.py
src/cyberhosp/api/: __init__.py  routes.py
src/cyberhosp/dlp/: __init__.py  engine.py
src/cyberhosp/integration/: __init__.py  base.py  fhir.py
src/cyberhosp/monitor/: __init__.py  analyzer.py  audit.py  base.py
tests/: test_integration.py  test_monitor.py
