[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberhosp"
version = "0.1.0"
description = "EHR-Integrated Healthcare Cybersecurity Platform"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.12"
authors = [
    { name = "CyberHosp Contributors" },
]
keywords = ["healthcare", "cybersecurity", "ehr", "hipaa", "dlp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnknownParameterType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["cyberhosp"]
